# ananicy-cpp-ng

./: INSTALL.sh  PKGBUILD  README.md
src/ananicy-cpp-ng-v2.0.0/: CMakeLists.txt  ananicy-cpp-ng.service  bolt.sh  configure.sh  pgo-bolt.sh  pgo.sh
src/ananicy-cpp-ng-v2.0.0/benchmarks/: CMakeLists.txt
src/ananicy-cpp-ng-v2.0.0/benchmarks/src/: benchmarks.cpp
src/ananicy-cpp-ng-v2.0.0/cmake/: CPM.cmake  CompilerChecks.cmake  FindBpfObject.cmake  PGO.cmake  StandardProjectSettings.cmake  Version.cmake
src/ananicy-cpp-ng-v2.0.0/include/: config.hpp  service.hpp  version.hpp  version.hpp.in
src/ananicy-cpp-ng-v2.0.0/include/core/: cgroups.hpp  priority.hpp  process.hpp  rules.hpp  worker.hpp
src/ananicy-cpp-ng-v2.0.0/include/utility/: argument_parser.hpp  backtrace.hpp  debug.hpp  process_info.hpp  singleton_process.hpp  synchronized_queue.hpp  utils.hpp
src/ananicy-cpp-ng-v2.0.0/libananicycppng_bpf/: CMakeLists.txt  main.cpp  runqslower.c
src/ananicy-cpp-ng-v2.0.0/libananicycppng_bpf/include/: bpf_program_utils.h  core_fixes.bpf.h  process_utils.h
src/ananicy-cpp-ng-v2.0.0/libananicycppng_bpf/include_cpp/: bpf_program.hpp
src/ananicy-cpp-ng-v2.0.0/libananicycppng_bpf/src/: ananicy_cpp_ng.bpf.c  bpf_program_utils.c
src/ananicy-cpp-ng-v2.0.0/libananicycppng_netlink/: CMakeLists.txt  main.cpp
src/ananicy-cpp-ng-v2.0.0/libananicycppng_netlink/include/: netlink_program_utils.h
src/ananicy-cpp-ng-v2.0.0/libananicycppng_netlink/include_cpp/: netlink_program.hpp
src/ananicy-cpp-ng-v2.0.0/libananicycppng_netlink/src/: netlink_program_utils.c
src/ananicy-cpp-ng-v2.0.0/src/: config.cpp  main.cpp  rules.cpp  utils.cpp  worker.cpp
src/ananicy-cpp-ng-v2.0.0/src/platform/generic/: service.cpp
src/ananicy-cpp-ng-v2.0.0/src/platform/linux/: backtrace.cpp  cgroups.cpp  debug.cpp  priority.cpp  process.cpp  process_helpers.hpp  process_info.cpp  singleton_process.cpp  syscalls.h
src/ananicy-cpp-ng-v2.0.0/src/platform/systemd/: service.cpp
src/ananicy-cpp-ng-v2.0.0/src/tests/: CMakeLists.txt  doctest_compatibility.h  fuzzer-parse_rule.cpp  test-rulesconfig.txt  test-sampleconfig.txt  unit-core.cpp  unit-utility.cpp
src/ananicy-cpp-ng-v2.0.0/src/utility/argument_parsing/: argument.cpp  argument_parser.cpp
